Fixing some font wrapping issues

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -49,11 +49,11 @@
 
             @include breakpoint( mobile-all ) {
 
-                font-size: 2.3rem;
+                font-size: 2.0rem;
 
                 .is-ios.is-mobile & {
 
-                    font-size: 2.1rem;
+                    font-size: 2.0rem;
 
                 }
 
