--- a/src/styles/pages/_work.scss
+++ b/src/styles/pages/_work.scss
@@ -33,7 +33,7 @@
 
     @include breakpoint( mobile-all ) {
 
-        font-size: 2.3rem;
+        font-size: 2.0rem;
 
     }
 
